Removing non-minified assets

--- a/index.html
+++ b/index.html
@@ -123,11 +123,9 @@
         <script type="text/javascript" src="js/jquery-1.5.min.js"></script>
         <script type="text/javascript" src="js/async.min.js"></script>
         <script type="text/javascript" src="js/underscore-min.js"></script>
-        <!--<script type="text/javascript" src="js/backbone-min.js"></script>-->
-        <script type="text/javascript" src="js/backbone.js"></script>
+        <script type="text/javascript" src="js/backbone-min.js"></script>
         <script type="text/javascript" src="js/ICanHaz.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
-        <!--<script type="text/javascript" src="jqm/jquery.mobile-1.0a3.min.js"></script>-->
-        <script type="text/javascript" src="jqm/jquery.mobile-1.0a3.js"></script>
+        <script type="text/javascript" src="jqm/jquery.mobile-1.0a3.min.js"></script>
     
     </body>
