First attempt at webapp

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div data-role="content">	
                 
-                <h2>Tap the more important of these:</h2>
+                <h2>Which is more important?</h2>
 
                 <ul id="compare-items" data-role="listview" data-split-icon="gear" data-inset="true">
                     <script id="sort_item" type="text/html">
@@ -89,7 +89,7 @@
                     </script>
                 </ul>
 
-                <p>Keep tapping until you think you're done</p>
+                <p>Keep going until things repeat</p>
 
             </div>
 
