Using relative path to app manifest

--- a/install.html
+++ b/install.html
@@ -12,7 +12,7 @@
         <script type="text/javascript">
             function install () {
                 navigator.apps.install({
-                    "url": "http://decafbad.com/2011/03/maybe/manifest.webapp",
+                    "url": "manifest.webapp",
                     "onsuccess": function () {
                         alert("Thank you for installing this awesome app.");
                     },
